--- a/LivroMente_FRONT/src/app/views/user-profile/user-profile.component.css
+++ b/LivroMente_FRONT/src/app/views/user-profile/user-profile.component.css
@@ -42,7 +42,6 @@ body{
 }
 
 .user-data{
-  padding: 10em;
 }
 
 .option:hover{
@@ -57,7 +56,6 @@ body{
 .options-display{
   background-color: #f3f2f2;
   padding: 3em;
-  height: 100%;
 }
 
 .order{
@@ -68,6 +66,13 @@ body{
 .order-details, .order-status, .order-products, .order-total{
   border-bottom: 1px solid rgb(215, 215, 215);
   padding: 10px;
+}
+
+.order-history{
+  display: flex;
+  flex-direction: column;
+  height: fit-content;
+  gap: 3vh;
 }
 
 .order-status span{
