--- a/LivroMente_FRONT/src/app/views/user-profile/user-profile.component.html
+++ b/LivroMente_FRONT/src/app/views/user-profile/user-profile.component.html
@@ -3,40 +3,26 @@
   <div class="user-menu">
     <div class="user-image">
       <fa-icon class="user-profile-image" [icon]="faCircleUser"></fa-icon>
-      <span>Welcome, User</span>
+      <span>Bem-vindo, {{user?.completeName}}</span>
     </div>
     <div class="user-menu-options">
-      <button (click)="selectMenuMyProfile()" class="option">
-        <fa-icon [icon]="faUser" size="xl"></fa-icon>
-        <a>My Profile</a>
-      </button>
       <button (click)="selectMenuOrderHistory()" class="option">
         <fa-icon [icon]="faClock" size="xl"></fa-icon>
-        <a>Order History</a>
-      </button>
-      <button (click)="selectMenuOrderHistory()" class="option">
-        <fa-icon [icon]="faLocationDot" size="xl"></fa-icon>
-        <a>My Addresses</a>
-      </button>
-      <button (click)="selectMenuOrderHistory()" class="option">
-        <fa-icon [icon]="faWallet" size="xl"></fa-icon>
-        <a>My Wallet</a>
+        <a>Histórico de Pedidos</a>
       </button>
     </div>
   </div>
   <div class="options-display">
     @if(currentMenu == 0){
-    <div class="user-data"></div>
-    } @if(currentMenu == 1){
     <div class="order-history">
       @for(order of Orders; track order.id){
       <div class="order">
         <div class="order-header">
           <div class="order-details">
-            <span class="bold">Order:</span> {{ order.id }} - {{ order.date | date: 'dd/MM/yyyy HH:mm'}}
+            <span class="bold">Pedido:</span> {{ order.id }} - {{ order.date | date: 'dd/MM/yyyy HH:mm'}}
           </div>
           <div class="order-status">
-            <span class="bold">Approved</span>
+            <span class="bold">{{ order.status }}</span>
           </div>
         </div>
         <div class="order-products">
@@ -47,7 +33,6 @@
             </div>
             <div class="book-details">
               <span class="bold">{{ orderDetail.book.title }}</span>
-              <span>Quantity: <span class="bold">{{ orderDetail.book.quantity }}</span></span>
               <span>R${{orderDetail.book.value}}</span>
             </div>
           </div>
